Meta2/y.output
Rules never reduced

   49 OPTIONAL5: /* empty */


State 0 conflicts: 5 shift/reduce
State 7 conflicts: 7 shift/reduce, 7 reduce/reduce
State 11 conflicts: 1 reduce/reduce
State 38 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 58 conflicts: 14 shift/reduce
State 59 conflicts: 18 shift/reduce
State 60 conflicts: 14 shift/reduce
State 84 conflicts: 20 reduce/reduce
State 98 conflicts: 1 shift/reduce
State 101 conflicts: 18 shift/reduce
State 102 conflicts: 18 shift/reduce
State 103 conflicts: 18 shift/reduce
State 104 conflicts: 18 shift/reduce
State 105 conflicts: 18 shift/reduce
State 106 conflicts: 14 shift/reduce
State 107 conflicts: 18 shift/reduce
State 108 conflicts: 18 shift/reduce
State 109 conflicts: 18 shift/reduce
State 110 conflicts: 18 shift/reduce
State 111 conflicts: 14 shift/reduce
State 112 conflicts: 18 shift/reduce
State 113 conflicts: 18 shift/reduce
State 114 conflicts: 14 shift/reduce
State 115 conflicts: 18 shift/reduce
State 116 conflicts: 18 shift/reduce
State 117 conflicts: 18 shift/reduce
State 118 conflicts: 14 shift/reduce
State 133 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce, 21 reduce/reduce


Grammar

    0 $accept: FunctionsAndDeclarations $end

    1 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDefinition
    2                         | FunctionsAndDeclarations FunctionDeclaration
    3                         | FunctionsAndDeclarations Declarator
    4                         | FunctionDefinition
    5                         | FunctionDeclaration
    6                         | Declaration

    7 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    8 FunctionBody: LBRACE OPTIONAL1 RBRACE

    9 OPTIONAL1: DeclarationsAndStatements
   10          | /* empty */

   11 DeclarationsAndStatements: Statement DeclarationsAndStatements
   12                          | Declaration DeclarationsAndStatements
   13                          | Statement
   14                          | Declaration

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI
   16                    | /* empty */

   17 FunctionDeclarator: IDENTIFIER LPAR ParameterList RPAR
   18                   | /* empty */

   19 ParameterList: ParameterList COMMA ParameterDeclaration
   20              | ParameterDeclaration

   21 ParameterDeclaration: TypeSpec OPTIONAL2
   22                     | /* empty */

   23 OPTIONAL2: IDENTIFIER
   24          | /* empty */

   25 Declaration: TypeSpec Declarator ZEROPLUS1 SEMI
   26            | error SEMI

   27 ZEROPLUS1: ZEROPLUS1 COMMA Declarator
   28          | /* empty */

   29 TypeSpec: CHAR
   30         | INT
   31         | VOID
   32         | SHORT
   33         | DOUBLE

   34 Declarator: IDENTIFIER OPTIONAL3
   35           | /* empty */

   36 OPTIONAL3: ASSIGN Expr
   37          | /* empty */

   38 Statement: OPTIONAL4 SEMI
   39          | error SEMI
   40          | LBRACE ZEROPLUS2 RBRACE
   41          | LBRACE error RBRACE
   42          | IF LPAR Expr RPAR Statement OPTIONAL5
   43          | IF LPAR Expr RPAR Statement
   44          | WHILE LPAR Expr RPAR Statement
   45          | RETURN OPTIONAL4 SEMI

   46 OPTIONAL4: Expr
   47          | /* empty */

   48 OPTIONAL5: ELSE Statement
   49          | /* empty */

   50 ZEROPLUS2: ZEROPLUS2 Statement
   51          | /* empty */

   52 Expr: Expr ASSIGN Expr
   53     | Expr COMMA Expr
   54     | Expr PLUS Expr
   55     | Expr MINUS Expr
   56     | Expr MUL Expr
   57     | Expr DIV Expr
   58     | Expr MOD Expr
   59     | Expr OR Expr
   60     | Expr AND Expr
   61     | Expr BITWISEAND Expr
   62     | Expr BITWISEOR Expr
   63     | Expr BITWISEXOR Expr
   64     | Expr EQ Expr
   65     | Expr NE Expr
   66     | Expr LE Expr
   67     | Expr GE Expr
   68     | Expr LT Expr
   69     | Expr GT Expr
   70     | PLUS Expr
   71     | MINUS Expr
   72     | NOT Expr
   73     | IDENTIFIER LPAR error RPAR
   74     | IDENTIFIER LPAR OPTIONAL6 RPAR
   75     | IDENTIFIER
   76     | NATURAL
   77     | CHRLITS
   78     | DECIMAL
   79     | LPAR Expr RPAR
   80     | LPAR error RPAR

   81 OPTIONAL6: ZEROPLUS3
   82          | /* empty */

   83 ZEROPLUS3: ZEROPLUS3 COMMA Expr
   84          | Expr


Terminals, with rules where they appear

$end (0) 0
error (256) 26 39 41 73 80
CHAR (258) 29
ELSE (259) 48
WHILE (260) 44
IF (261) 42 43
INT (262) 30
SHORT (263) 32
DOUBLE (264) 33
RETURN (265) 45
VOID (266) 31
BITWISEAND (267) 61
BITWISEOR (268) 62
BITWISEXOR (269) 63
AND (270) 60
ASSIGN (271) 36 52
MUL (272) 56
COMMA (273) 19 27 53 83
EQ (274) 64
GE (275) 67
GT (276) 69
DIV (277) 57
LBRACE (278) 8 40 41
LE (279) 66
LPAR (280) 17 42 43 44 73 74 79 80
LT (281) 68
MINUS (282) 55 71
MOD (283) 58
NE (284) 65
NOT (285) 72
OR (286) 59
PLUS (287) 54 70
RBRACE (288) 8 40 41
RPAR (289) 17 42 43 44 73 74 79 80
SEMI (290) 15 25 26 38 39 45
CHRLITS (291) 77
IDENTIFIER (292) 17 23 34 73 74 75
NATURAL (293) 76
DECIMAL (294) 78
LOW (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
FunctionsAndDeclarations (42)
    on left: 1 2 3 4 5 6, on right: 0 1 2 3
FunctionDefinition (43)
    on left: 7, on right: 1 4
FunctionBody (44)
    on left: 8, on right: 7
OPTIONAL1 (45)
    on left: 9 10, on right: 8
DeclarationsAndStatements (46)
    on left: 11 12 13 14, on right: 9 11 12
FunctionDeclaration (47)
    on left: 15 16, on right: 2 5
FunctionDeclarator (48)
    on left: 17 18, on right: 7 15
ParameterList (49)
    on left: 19 20, on right: 17 19
ParameterDeclaration (50)
    on left: 21 22, on right: 19 20
OPTIONAL2 (51)
    on left: 23 24, on right: 21
Declaration (52)
    on left: 25 26, on right: 6 12 14
ZEROPLUS1 (53)
    on left: 27 28, on right: 25 27
TypeSpec (54)
    on left: 29 30 31 32 33, on right: 7 15 21 25
Declarator (55)
    on left: 34 35, on right: 3 25 27
OPTIONAL3 (56)
    on left: 36 37, on right: 34
Statement (57)
    on left: 38 39 40 41 42 43 44 45, on right: 11 13 42 43 44 48 50
OPTIONAL4 (58)
    on left: 46 47, on right: 38 45
OPTIONAL5 (59)
    on left: 48 49, on right: 42
ZEROPLUS2 (60)
    on left: 50 51, on right: 40 50
Expr (61)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 71 72 73 74 75 76 77 78 79 80, on right: 36 42 43 44 46 52 53
    54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 79 83
    84
OPTIONAL6 (62)
    on left: 81 82, on right: 74
ZEROPLUS3 (63)
    on left: 83 84, on right: 81 83


state 0

    0 $accept: . FunctionsAndDeclarations $end
    1 FunctionsAndDeclarations: . FunctionsAndDeclarations FunctionDefinition
    2                         | . FunctionsAndDeclarations FunctionDeclaration
    3                         | . FunctionsAndDeclarations Declarator
    4                         | . FunctionDefinition
    5                         | . FunctionDeclaration
    6                         | . Declaration
    7 FunctionDefinition: . TypeSpec FunctionDeclarator FunctionBody
   15 FunctionDeclaration: . TypeSpec FunctionDeclarator SEMI
   16                    | .  [$end, CHAR, INT, SHORT, DOUBLE, VOID, IDENTIFIER]
   25 Declaration: . TypeSpec Declarator ZEROPLUS1 SEMI
   26            | . error SEMI
   29 TypeSpec: . CHAR
   30         | . INT
   31         | . VOID
   32         | . SHORT
   33         | . DOUBLE

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end        reduce using rule 16 (FunctionDeclaration)
    CHAR        [reduce using rule 16 (FunctionDeclaration)]
    INT         [reduce using rule 16 (FunctionDeclaration)]
    SHORT       [reduce using rule 16 (FunctionDeclaration)]
    DOUBLE      [reduce using rule 16 (FunctionDeclaration)]
    VOID        [reduce using rule 16 (FunctionDeclaration)]
    IDENTIFIER  reduce using rule 16 (FunctionDeclaration)

    FunctionsAndDeclarations  go to state 7
    FunctionDefinition        go to state 8
    FunctionDeclaration       go to state 9
    Declaration               go to state 10
    TypeSpec                  go to state 11


state 1

   26 Declaration: error . SEMI

    SEMI  shift, and go to state 12


state 2

   29 TypeSpec: CHAR .

    $default  reduce using rule 29 (TypeSpec)


state 3

   30 TypeSpec: INT .

    $default  reduce using rule 30 (TypeSpec)


state 4

   32 TypeSpec: SHORT .

    $default  reduce using rule 32 (TypeSpec)


state 5

   33 TypeSpec: DOUBLE .

    $default  reduce using rule 33 (TypeSpec)


state 6

   31 TypeSpec: VOID .

    $default  reduce using rule 31 (TypeSpec)


state 7

    0 $accept: FunctionsAndDeclarations . $end
    1 FunctionsAndDeclarations: FunctionsAndDeclarations . FunctionDefinition
    2                         | FunctionsAndDeclarations . FunctionDeclaration
    3                         | FunctionsAndDeclarations . Declarator
    7 FunctionDefinition: . TypeSpec FunctionDeclarator FunctionBody
   15 FunctionDeclaration: . TypeSpec FunctionDeclarator SEMI
   16                    | .  [$end, CHAR, INT, SHORT, DOUBLE, VOID, IDENTIFIER]
   29 TypeSpec: . CHAR
   30         | . INT
   31         | . VOID
   32         | . SHORT
   33         | . DOUBLE
   34 Declarator: . IDENTIFIER OPTIONAL3
   35           | .  [$end, CHAR, INT, SHORT, DOUBLE, VOID, IDENTIFIER]

    $end        shift, and go to state 13
    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    SHORT       shift, and go to state 4
    DOUBLE      shift, and go to state 5
    VOID        shift, and go to state 6
    IDENTIFIER  shift, and go to state 14

    $end        [reduce using rule 16 (FunctionDeclaration)]
    $end        [reduce using rule 35 (Declarator)]
    CHAR        [reduce using rule 16 (FunctionDeclaration)]
    CHAR        [reduce using rule 35 (Declarator)]
    INT         [reduce using rule 16 (FunctionDeclaration)]
    INT         [reduce using rule 35 (Declarator)]
    SHORT       [reduce using rule 16 (FunctionDeclaration)]
    SHORT       [reduce using rule 35 (Declarator)]
    DOUBLE      [reduce using rule 16 (FunctionDeclaration)]
    DOUBLE      [reduce using rule 35 (Declarator)]
    VOID        [reduce using rule 16 (FunctionDeclaration)]
    VOID        [reduce using rule 35 (Declarator)]
    IDENTIFIER  [reduce using rule 16 (FunctionDeclaration)]
    IDENTIFIER  [reduce using rule 35 (Declarator)]

    FunctionDefinition   go to state 15
    FunctionDeclaration  go to state 16
    TypeSpec             go to state 17
    Declarator           go to state 18


state 8

    4 FunctionsAndDeclarations: FunctionDefinition .

    $default  reduce using rule 4 (FunctionsAndDeclarations)


state 9

    5 FunctionsAndDeclarations: FunctionDeclaration .

    $default  reduce using rule 5 (FunctionsAndDeclarations)


state 10

    6 FunctionsAndDeclarations: Declaration .

    $default  reduce using rule 6 (FunctionsAndDeclarations)


state 11

    7 FunctionDefinition: TypeSpec . FunctionDeclarator FunctionBody
   15 FunctionDeclaration: TypeSpec . FunctionDeclarator SEMI
   17 FunctionDeclarator: . IDENTIFIER LPAR ParameterList RPAR
   18                   | .  [LBRACE, SEMI]
   25 Declaration: TypeSpec . Declarator ZEROPLUS1 SEMI
   34 Declarator: . IDENTIFIER OPTIONAL3
   35           | .  [COMMA, SEMI]

    IDENTIFIER  shift, and go to state 19

    COMMA     reduce using rule 35 (Declarator)
    SEMI      reduce using rule 18 (FunctionDeclarator)
    SEMI      [reduce using rule 35 (Declarator)]
    $default  reduce using rule 18 (FunctionDeclarator)

    FunctionDeclarator  go to state 20
    Declarator          go to state 21


state 12

   26 Declaration: error SEMI .

    $default  reduce using rule 26 (Declaration)


state 13

    0 $accept: FunctionsAndDeclarations $end .

    $default  accept


state 14

   34 Declarator: IDENTIFIER . OPTIONAL3
   36 OPTIONAL3: . ASSIGN Expr
   37          | .  [$end, CHAR, INT, SHORT, DOUBLE, VOID, COMMA, SEMI, IDENTIFIER]

    ASSIGN  shift, and go to state 22

    $default  reduce using rule 37 (OPTIONAL3)

    OPTIONAL3  go to state 23


state 15

    1 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDefinition .

    $default  reduce using rule 1 (FunctionsAndDeclarations)


state 16

    2 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDeclaration .

    $default  reduce using rule 2 (FunctionsAndDeclarations)


state 17

    7 FunctionDefinition: TypeSpec . FunctionDeclarator FunctionBody
   15 FunctionDeclaration: TypeSpec . FunctionDeclarator SEMI
   17 FunctionDeclarator: . IDENTIFIER LPAR ParameterList RPAR
   18                   | .  [LBRACE, SEMI]

    IDENTIFIER  shift, and go to state 24

    $default  reduce using rule 18 (FunctionDeclarator)

    FunctionDeclarator  go to state 20


state 18

    3 FunctionsAndDeclarations: FunctionsAndDeclarations Declarator .

    $default  reduce using rule 3 (FunctionsAndDeclarations)


state 19

   17 FunctionDeclarator: IDENTIFIER . LPAR ParameterList RPAR
   34 Declarator: IDENTIFIER . OPTIONAL3
   36 OPTIONAL3: . ASSIGN Expr
   37          | .  [COMMA, SEMI]

    ASSIGN  shift, and go to state 22
    LPAR    shift, and go to state 25

    $default  reduce using rule 37 (OPTIONAL3)

    OPTIONAL3  go to state 23


state 20

    7 FunctionDefinition: TypeSpec FunctionDeclarator . FunctionBody
    8 FunctionBody: . LBRACE OPTIONAL1 RBRACE
   15 FunctionDeclaration: TypeSpec FunctionDeclarator . SEMI

    LBRACE  shift, and go to state 26
    SEMI    shift, and go to state 27

    FunctionBody  go to state 28


state 21

   25 Declaration: TypeSpec Declarator . ZEROPLUS1 SEMI
   27 ZEROPLUS1: . ZEROPLUS1 COMMA Declarator
   28          | .

    $default  reduce using rule 28 (ZEROPLUS1)

    ZEROPLUS1  go to state 29


state 22

   36 OPTIONAL3: ASSIGN . Expr
   52 Expr: . Expr ASSIGN Expr
   53     | . Expr COMMA Expr
   54     | . Expr PLUS Expr
   55     | . Expr MINUS Expr
   56     | . Expr MUL Expr
   57     | . Expr DIV Expr
   58     | . Expr MOD Expr
   59     | . Expr OR Expr
   60     | . Expr AND Expr
   61     | . Expr BITWISEAND Expr
   62     | . Expr BITWISEOR Expr
   63     | . Expr BITWISEXOR Expr
   64     | . Expr EQ Expr
   65     | . Expr NE Expr
   66     | . Expr LE Expr
   67     | . Expr GE Expr
   68     | . Expr LT Expr
   69     | . Expr GT Expr
   70     | . PLUS Expr
   71     | . MINUS Expr
   72     | . NOT Expr
   73     | . IDENTIFIER LPAR error RPAR
   74     | . IDENTIFIER LPAR OPTIONAL6 RPAR
   75     | . IDENTIFIER
   76     | . NATURAL
   77     | . CHRLITS
   78     | . DECIMAL
   79     | . LPAR Expr RPAR
   80     | . LPAR error RPAR

    LPAR        shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUS        shift, and go to state 33
    CHRLITS     shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    NATURAL     shift, and go to state 36
    DECIMAL     shift, and go to state 37

    Expr  go to state 38


state 23

   34 Declarator: IDENTIFIER OPTIONAL3 .

    $default  reduce using rule 34 (Declarator)


state 24

   17 FunctionDeclarator: IDENTIFIER . LPAR ParameterList RPAR

    LPAR  shift, and go to state 25


state 25

   17 FunctionDeclarator: IDENTIFIER LPAR . ParameterList RPAR
   19 ParameterList: . ParameterList COMMA ParameterDeclaration
   20              | . ParameterDeclaration
   21 ParameterDeclaration: . TypeSpec OPTIONAL2
   22                     | .  [COMMA, RPAR]
   29 TypeSpec: . CHAR
   30         | . INT
   31         | . VOID
   32         | . SHORT
   33         | . DOUBLE

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $default  reduce using rule 22 (ParameterDeclaration)

    ParameterList         go to state 39
    ParameterDeclaration  go to state 40
    TypeSpec              go to state 41


state 26

    8 FunctionBody: LBRACE . OPTIONAL1 RBRACE
    9 OPTIONAL1: . DeclarationsAndStatements
   10          | .  [RBRACE]
   11 DeclarationsAndStatements: . Statement DeclarationsAndStatements
   12                          | . Declaration DeclarationsAndStatements
   13                          | . Statement
   14                          | . Declaration
   25 Declaration: . TypeSpec Declarator ZEROPLUS1 SEMI
   26            | . error SEMI
   29 TypeSpec: . CHAR
   30         | . INT
   31         | . VOID
   32         | . SHORT
   33         | . DOUBLE
   38 Statement: . OPTIONAL4 SEMI
   39          | . error SEMI
   40          | . LBRACE ZEROPLUS2 RBRACE
   41          | . LBRACE error RBRACE
   42          | . IF LPAR Expr RPAR Statement OPTIONAL5
   43          | . IF LPAR Expr RPAR Statement
   44          | . WHILE LPAR Expr RPAR Statement
   45          | . RETURN OPTIONAL4 SEMI
   46 OPTIONAL4: . Expr
   47          | .  [SEMI]
   52 Expr: . Expr ASSIGN Expr
   53     | . Expr COMMA Expr
   54     | . Expr PLUS Expr
   55     | . Expr MINUS Expr
   56     | . Expr MUL Expr
   57     | . Expr DIV Expr
   58     | . Expr MOD Expr
   59     | . Expr OR Expr
   60     | . Expr AND Expr
   61     | . Expr BITWISEAND Expr
   62     | . Expr BITWISEOR Expr
   63     | . Expr BITWISEXOR Expr
   64     | . Expr EQ Expr
   65     | . Expr NE Expr
   66     | . Expr LE Expr
   67     | . Expr GE Expr
   68     | . Expr LT Expr
   69     | . Expr GT Expr
   70     | . PLUS Expr
   71     | . MINUS Expr
   72     | . NOT Expr
   73     | . IDENTIFIER LPAR error RPAR
   74     | . IDENTIFIER LPAR OPTIONAL6 RPAR
   75     | . IDENTIFIER
   76     | . NATURAL
   77     | . CHRLITS
   78     | . DECIMAL
   79     | . LPAR Expr RPAR
   80     | . LPAR error RPAR

    error       shift, and go to state 42
    CHAR        shift, and go to state 2
    WHILE       shift, and go to state 43
    IF          shift, and go to state 44
    INT         shift, and go to state 3
    SHORT       shift, and go to state 4
    DOUBLE      shift, and go to state 5
    RETURN      shift, and go to state 45
    VOID        shift, and go to state 6
    LBRACE      shift, and go to state 46
    LPAR        shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUS        shift, and go to state 33
    CHRLITS     shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    NATURAL     shift, and go to state 36
    DECIMAL     shift, and go to state 37

    RBRACE  reduce using rule 10 (OPTIONAL1)
    SEMI    reduce using rule 47 (OPTIONAL4)

    OPTIONAL1                  go to state 47
    DeclarationsAndStatements  go to state 48
    Declaration                go to state 49
    TypeSpec                   go to state 50
    Statement                  go to state 51
    OPTIONAL4                  go to state 52
    Expr                       go to state 53


state 27

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI .

    $default  reduce using rule 15 (FunctionDeclaration)


state 28

    7 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody .

    $default  reduce using rule 7 (FunctionDefinition)


state 29

   25 Declaration: TypeSpec Declarator ZEROPLUS1 . SEMI
   27 ZEROPLUS1: ZEROPLUS1 . COMMA Declarator

    COMMA  shift, and go to state 54
    SEMI   shift, and go to state 55


state 30

   52 Expr: . Expr ASSIGN Expr
   53     | . Expr COMMA Expr
   54     | . Expr PLUS Expr
   55     | . Expr MINUS Expr
   56     | . Expr MUL Expr
   57     | . Expr DIV Expr
   58     | . Expr MOD Expr
   59     | . Expr OR Expr
   60     | . Expr AND Expr
   61     | . Expr BITWISEAND Expr
   62     | . Expr BITWISEOR Expr
   63     | . Expr BITWISEXOR Expr
   64     | . Expr EQ Expr
   65     | . Expr NE Expr
   66     | . Expr LE Expr
   67     | . Expr GE Expr
   68     | . Expr LT Expr
   69     | . Expr GT Expr
   70     | . PLUS Expr
   71     | . MINUS Expr
   72     | . NOT Expr
   73     | . IDENTIFIER LPAR error RPAR
   74     | . IDENTIFIER LPAR OPTIONAL6 RPAR
   75     | . IDENTIFIER
   76     | . NATURAL
   77     | . CHRLITS
   78     | . DECIMAL
   79     | . LPAR Expr RPAR
   79     | LPAR . Expr RPAR
   80     | . LPAR error RPAR
   80     | LPAR . error RPAR

    error       shift, and go to state 56
    LPAR        shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUS        shift, and go to state 33
    CHRLITS     shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    NATURAL     shift, and go to state 36
    DECIMAL     shift, and go to state 37

    Expr  go to state 57


state 31

   52 Expr: . Expr ASSIGN Expr
   53     | . Expr COMMA Expr
   54     | . Expr PLUS Expr
   55     | . Expr MINUS Expr
   56     | . Expr MUL Expr
   57     | . Expr DIV Expr
   58     | . Expr MOD Expr
   59     | . Expr OR Expr
   60     | . Expr AND Expr
   61     | . Expr BITWISEAND Expr
   62     | . Expr BITWISEOR Expr
   63     | . Expr BITWISEXOR Expr
   64     | . Expr EQ Expr
   65     | . Expr NE Expr
   66     | . Expr LE Expr
   67     | . Expr GE Expr
   68     | . Expr LT Expr
   69     | . Expr GT Expr
   70     | . PLUS Expr
   71     | . MINUS Expr
   71     | MINUS . Expr
   72     | . NOT Expr
   73     | . IDENTIFIER LPAR error RPAR
   74     | . IDENTIFIER LPAR OPTIONAL6 RPAR
   75     | . IDENTIFIER
   76     | . NATURAL
   77     | . CHRLITS
   78     | . DECIMAL
   79     | . LPAR Expr RPAR
   80     | . LPAR error RPAR

    LPAR        shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUS        shift, and go to state 33
    CHRLITS     shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    NATURAL     shift, and go to state 36
    DECIMAL     shift, and go to state 37

    Expr  go to state 58


state 32

   52 Expr: . Expr ASSIGN Expr
   53     | . Expr COMMA Expr
   54     | . Expr PLUS Expr
   55     | . Expr MINUS Expr
   56     | . Expr MUL Expr
   57     | . Expr DIV Expr
   58     | . Expr MOD Expr
   59     | . Expr OR Expr
   60     | . Expr AND Expr
   61     | . Expr BITWISEAND Expr
   62     | . Expr BITWISEOR Expr
   63     | . Expr BITWISEXOR Expr
   64     | . Expr EQ Expr
   65     | . Expr NE Expr
   66     | . Expr LE Expr
   67     | . Expr GE Expr
   68     | . Expr LT Expr
   69     | . Expr GT Expr
   70     | . PLUS Expr
   71     | . MINUS Expr
   72     | . NOT Expr
   72     | NOT . Expr
   73     | . IDENTIFIER LPAR error RPAR
   74     | . IDENTIFIER LPAR OPTIONAL6 RPAR
   75     | . IDENTIFIER
   76     | . NATURAL
   77     | . CHRLITS
   78     | . DECIMAL
   79     | . LPAR Expr RPAR
   80     | . LPAR error RPAR

    LPAR        shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUS        shift, and go to state 33
    CHRLITS     shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    NATURAL     shift, and go to state 36
    DECIMAL     shift, and go to state 37

    Expr  go to state 59


state 33

   52 Expr: . Expr ASSIGN Expr
   53     | . Expr COMMA Expr
   54     | . Expr PLUS Expr
   55     | . Expr MINUS Expr
   56     | . Expr MUL Expr
   57     | . Expr DIV Expr
   58     | . Expr MOD Expr
   59     | . Expr OR Expr
   60     | . Expr AND Expr
   61     | . Expr BITWISEAND Expr
   62     | . Expr BITWISEOR Expr
   63     | . Expr BITWISEXOR Expr
   64     | . Expr EQ Expr
   65     | . Expr NE Expr
   66     | . Expr LE Expr
   67     | . Expr GE Expr
   68     | . Expr LT Expr
   69     | . Expr GT Expr
   70     | . PLUS Expr
   70     | PLUS . Expr
   71     | . MINUS Expr
   72     | . NOT Expr
   73     | . IDENTIFIER LPAR error RPAR
   74     | . IDENTIFIER LPAR OPTIONAL6 RPAR
   75     | . IDENTIFIER
   76     | . NATURAL
   77     | . CHRLITS
   78     | . DECIMAL
   79     | . LPAR Expr RPAR
   80     | . LPAR error RPAR

    LPAR        shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUS        shift, and go to state 33
    CHRLITS     shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    NATURAL     shift, and go to state 36
    DECIMAL     shift, and go to state 37

    Expr  go to state 60


state 34

   77 Expr: CHRLITS .

    $default  reduce using rule 77 (Expr)


state 35

   73 Expr: IDENTIFIER . LPAR error RPAR
   74     | IDENTIFIER . LPAR OPTIONAL6 RPAR
   75     | IDENTIFIER .  [$end, CHAR, INT, SHORT, DOUBLE, VOID, BITWISEAND, BITWISEOR, BITWISEXOR, AND, ASSIGN, MUL, COMMA, EQ, GE, GT, DIV, LE, LT, MINUS, MOD, NE, OR, PLUS, RPAR, SEMI, IDENTIFIER]

    LPAR  shift, and go to state 61

    $default  reduce using rule 75 (Expr)


state 36

   76 Expr: NATURAL .

    $default  reduce using rule 76 (Expr)


state 37

   78 Expr: DECIMAL .

    $default  reduce using rule 78 (Expr)


state 38

   36 OPTIONAL3: ASSIGN Expr .  [$end, CHAR, INT, SHORT, DOUBLE, VOID, COMMA, SEMI, IDENTIFIER]
   52 Expr: Expr . ASSIGN Expr
   53     | Expr . COMMA Expr
   54     | Expr . PLUS Expr
   55     | Expr . MINUS Expr
   56     | Expr . MUL Expr
   57     | Expr . DIV Expr
   58     | Expr . MOD Expr
   59     | Expr . OR Expr
   60     | Expr . AND Expr
   61     | Expr . BITWISEAND Expr
   62     | Expr . BITWISEOR Expr
   63     | Expr . BITWISEXOR Expr
   64     | Expr . EQ Expr
   65     | Expr . NE Expr
   66     | Expr . LE Expr
   67     | Expr . GE Expr
   68     | Expr . LT Expr
   69     | Expr . GT Expr

    BITWISEAND  shift, and go to state 62
    BITWISEOR   shift, and go to state 63
    BITWISEXOR  shift, and go to state 64
    AND         shift, and go to state 65
    ASSIGN      shift, and go to state 66
    MUL         shift, and go to state 67
    COMMA       shift, and go to state 68
    EQ          shift, and go to state 69
    GE          shift, and go to state 70
    GT          shift, and go to state 71
    DIV         shift, and go to state 72
    LE          shift, and go to state 73
    LT          shift, and go to state 74
    MINUS       shift, and go to state 75
    MOD         shift, and go to state 76
    NE          shift, and go to state 77
    OR          shift, and go to state 78
    PLUS        shift, and go to state 79

    COMMA     [reduce using rule 36 (OPTIONAL3)]
    $default  reduce using rule 36 (OPTIONAL3)


state 39

   17 FunctionDeclarator: IDENTIFIER LPAR ParameterList . RPAR
   19 ParameterList: ParameterList . COMMA ParameterDeclaration

    COMMA  shift, and go to state 80
    RPAR   shift, and go to state 81


state 40

   20 ParameterList: ParameterDeclaration .

    $default  reduce using rule 20 (ParameterList)


state 41

   21 ParameterDeclaration: TypeSpec . OPTIONAL2
   23 OPTIONAL2: . IDENTIFIER
   24          | .  [COMMA, RPAR]

    IDENTIFIER  shift, and go to state 82

    $default  reduce using rule 24 (OPTIONAL2)

    OPTIONAL2  go to state 83


state 42

   26 Declaration: error . SEMI
   39 Statement: error . SEMI

    SEMI  shift, and go to state 84


state 43

   44 Statement: WHILE . LPAR Expr RPAR Statement

    LPAR  shift, and go to state 85


state 44

   42 Statement: IF . LPAR Expr RPAR Statement OPTIONAL5
   43          | IF . LPAR Expr RPAR Statement

    LPAR  shift, and go to state 86


state 45

   45 Statement: RETURN . OPTIONAL4 SEMI
   46 OPTIONAL4: . Expr
   47          | .  [SEMI]
   52 Expr: . Expr ASSIGN Expr
   53     | . Expr COMMA Expr
   54     | . Expr PLUS Expr
   55     | . Expr MINUS Expr
   56     | . Expr MUL Expr
   57     | . Expr DIV Expr
   58     | . Expr MOD Expr
   59     | . Expr OR Expr
   60     | . Expr AND Expr
   61     | . Expr BITWISEAND Expr
   62     | . Expr BITWISEOR Expr
   63     | . Expr BITWISEXOR Expr
   64     | . Expr EQ Expr
   65     | . Expr NE Expr
   66     | . Expr LE Expr
   67     | . Expr GE Expr
   68     | . Expr LT Expr
   69     | . Expr GT Expr
   70     | . PLUS Expr
   71     | . MINUS Expr
   72     | . NOT Expr
   73     | . IDENTIFIER LPAR error RPAR
   74     | . IDENTIFIER LPAR OPTIONAL6 RPAR
   75     | . IDENTIFIER
   76     | . NATURAL
   77     | . CHRLITS
   78     | . DECIMAL
   79     | . LPAR Expr RPAR
   80     | . LPAR error RPAR

    LPAR        shift, and go to state 30
    MINUS       shift, and go to state 31
    NOT         shift, and go to state 32
    PLUS        shift, and go to state 33
    CHRLITS     shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    NATURAL     shift, and go to state 36
    DECIMAL     shift, and go to state 37

    $default  reduce using rule 47 (OPTIONAL4)

    OPTIONAL4  go to state 87
    Expr       go to state 53


state 46

   40 Statement: LBRACE . ZEROPLUS2 RBRACE
   41          | LBRACE . error RBRACE
   50 ZEROPLUS2: . ZEROPLUS2 Statement
   51          | .  [error, WHILE, IF, RETURN, LBRACE, LPAR, MINUS, NOT, PLUS, RBRACE, SEMI, CHRLITS, IDENTIFIER, NATURAL, DECIMAL]

    error  shift, and go to state 88

    error       [reduce using rule 51 (ZEROPLUS2)]
    WHILE       reduce using rule 51 (ZEROPLUS2)
    IF          reduce using rule 51 (ZEROPLUS2)
    RETURN      reduce using rule 51 (ZEROPLUS2)
    LBRACE      reduce using rule 51 (ZEROPLUS2)
    LPAR        reduce using rule 51 (ZEROPLUS2)
    MINUS       reduce using rule 51 (ZEROPLUS2)
    NOT         reduce using rule 51 (ZEROPLUS2)
    PLUS        reduce using rule 51 (ZEROPLUS2)
    RBRACE      reduce using rule 51 (ZEROPLUS2)
    SEMI        reduce using rule 51 (ZEROPLUS2)
    CHRLITS     reduce using rule 51 (ZEROPLUS2)
    IDENTIFIER  reduce using rule 51 (ZEROPLUS2)
    NATURAL     reduce using rule 51 (ZEROPLUS2)
    DECIMAL     reduce using rule 51 (ZEROPLUS2)

    ZEROPLUS2  go to state 89


state 47

    8 FunctionBody: LBRACE OPTIONAL1 . RBRACE

    RBRACE  shift, and go to state 90


state 48

    9 OPTIONAL1: DeclarationsAndStatements .
